Fix Underline on Mobile

--- a/css/samuel-johnson-final.webflow.css
+++ b/css/samuel-johnson-final.webflow.css
@@ -707,10 +707,7 @@
 }
 
 .project-content {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
+  display: block;
   height: 55%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
@@ -1798,7 +1795,7 @@
   }
 
   .underline-block.nav.home {
-    display: block;
+    display: none;
     margin-top: 0px;
   }
 
